# edge-llm

./: BENCHMARKS.md  BENCHMARK_HISTORY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: benchmark-pr.yml  benchmark.yml  ci.yml  deploy-pages.yml  npm-publish.yml
blog/: 2026-04-14-edge-llm-v1.1.md
edge-core/: Cargo.toml
edge-core/examples/: matvec_bench.rs
edge-core/src/: chat.rs  config.rs  error.rs  generate.rs  lib.rs  memory.rs  model.rs  sampling.rs  tensor.rs
edge-core/tests/: inference_pipeline.rs
edge-edge/: Cargo.toml
edge-edge/examples/: edge_cli.rs
edge-edge/src/: engine.rs  lib.rs
edge-gpu/: Cargo.toml
edge-gpu/examples/: gpu_bench.rs
edge-gpu/shaders/: dequant_q3k.wgsl
edge-gpu/src/: backend.rs  lib.rs  pipeline.rs
edge-gpu/tests/: gpu_backend.rs
edge-loader/: Cargo.toml
edge-loader/src/: gguf.rs  lib.rs  lora.rs  progressive.rs  safetensors.rs  weights.rs
edge-loader/tests/: q4k_real_model.rs  q5_0_real_model.rs
edge-server/: Cargo.toml
edge-server/examples/: e2e_bench.rs  prefill_profile.rs
edge-server/src/: api.rs  cli.rs  info.rs  main.rs
edge-simd/: Cargo.toml
edge-simd/benches/: matmul_bench.rs
edge-simd/src/: backend.rs  lib.rs  matmul.rs
edge-web/: Cargo.toml  README.md  package.json
edge-web/demo/: README.md  index.html
edge-web/demo-vue/src/: App.vue
edge-web/demo-vue/src/components/features/: ShardedDownloader.vue
edge-web/demo-vue/src/composables/: useShardedDownload.ts
edge-web/demo-vue/src/types/: shard.ts
edge-web/js/: index.ts  types.ts  webtransport-loader.js  worker.ts
edge-web/src/: lib.rs
edgellm/: Cargo.toml
edgellm/examples/: simple_chat.rs
edgellm/src/: lib.rs
examples/browser-chat/: README.md  index.html
scripts/: bench_multi.sh  check_perf_regression.sh
