[package]
name = "edgellm-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native server with OpenAI-compatible API for Edge LLM inference"
keywords = ["llm", "server", "openai", "inference", "api"]
categories = ["web-programming::http-server", "science"]
readme = "../README.md"

[[bin]]
name = "edge-server"
path = "src/main.rs"

[[bin]]
name = "edge-cli"
path = "src/cli.rs"

[[bin]]
name = "edge-info"
path = "src/info.rs"

[dependencies]
edge-core = { package = "edgellm-core", path = "../edge-core", version = "0.1.0" }
edge-loader = { package = "edgellm-loader", path = "../edge-loader", version = "0.1.0" }
edge-gpu = { package = "edgellm-gpu", path = "../edge-gpu", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
pollster = "0.4"
